--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -5,55 +5,9 @@
 {% block javascript_extras %}
     <script src="{% static "dropzonejs/min/dropzone.min.js" %}"></script>
     <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}"></script>
+    <script src="{% static "js/dropzone-client.js" %}"></script>
     <script>
         Dropzone.autoDiscover = false;
-        let main_response = undefined;
-        function init_dropzone_from_file(form_id) {
-            let myDropzone = new Dropzone("div#"+form_id+"_dropzone", {
-                url: "/upload/",
-                uploadMultiple: true,
-                maxFilesize: 4, // 4 Mo = 4194304o
-                acceptedFiles: 'image/*,application/pdf',
-                addRemoveLinks: true,
-                init: function () {
-                    this.on("removedfile", function (file) {
-                        console.log(file)
-                        let files = [];
-                        if (document.getElementById(form_id).value) files = JSON.parse(document.getElementById(form_id).value);
-                        const index = files.indexOf(file.uuid);
-                        if (index > -1) {
-                            files.splice(index, 1);
-                        }
-                        document.getElementById(form_id).value = JSON.stringify(files);
-                    })
-                    this.on("success", function (file, response) {
-                        //document.querySelector('img[alt="test.pdf"]').src --> retrieve thumbnail
-                        main_response = response;
-                        for (var i = 0; i < response.uploaded_file.length; i++) {
-                            if (response.uploaded_file[i].filename == file.name) {
-                                file.uuid = response.uploaded_file[i].uuid
-                            }
-                        }
-                        let files = [];
-                        if (document.getElementById(form_id).value) files = JSON.parse(document.getElementById(form_id).value);
-                        if (!files.includes(file.uuid)) files.push(file.uuid);
-                        document.getElementById(form_id).value = JSON.stringify(files);
-                    })
-                },
-                dictInvalidFileType: "Il n'est pas possible de téléverser ce fichier, seul les Images et PDF sont acceptées",
-                dictFileTooBig: "Le fichier est trop gros, il n doit pas dépasser 4Mo.",
-                dictDefaultMessage: "Cliquez dans la zone ou déposez-y vos fichiez",
-                headers: {'X-CSRFToken': '{{ csrf_token }}'}
-            });
-            return myDropzone;
-        }
-
-        function init_dropzone_thumbnail(myDropzone, name, size, uuid, thumbnail_url) {
-            var mockFile = { name: name, size: size, uuid: uuid };
-            myDropzone.options.addedfile.call(myDropzone, mockFile);
-            myDropzone.options.thumbnail.call(myDropzone, mockFile, thumbnail_url);
-        }
-
     </script>
 {% endblock %}
 
@@ -154,6 +108,8 @@
                                         <div class="fr-col-12 dropzone dz" id="{{form.acte_notarial_files.id_for_label}}_dropzone">
                                             <div class="fallback">
                                                 Votre navigateur ne permet pas de téléverser des documents.
+                                                Nous vous conseillons de modifier vos paramètres concernant
+                                                l'application des scripts javascript ou d'utiliser un autre navigateur.
                                             </div>
                                         </div>
                                         <input hidden
@@ -164,7 +120,7 @@
 
                                     </div>
                                     <script type="text/javascript">
-                                        let myDropzone = init_dropzone_from_file("{{form.acte_notarial_files.id_for_label}}");
+                                        let myDropzone = init_dropzone_from_file("{{form.acte_notarial_files.id_for_label}}", '{{ csrf_token }}');
                                     </script>
                                     {% for acte_notarial_file in acte_notarial_files %}
                                         <script type="text/javascript">
