--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -53,29 +53,29 @@
                         </div>
 
                         <div class="fr-input-group {% if form.vendeur.errors %}fr-select-group--error{% endif %}">
-                            {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur convention=convention help="Identité du vendeur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
+                            {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files form_input_files_json=form.vendeur_files_json convention=convention help="Identité du vendeur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
                         </div>
 
                         <div class="fr-input-group {% if form.acquereur.errors %}fr-select-group--error{% endif %}">
-                            {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur convention=convention help="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
+                            {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files form_input_files_json=form.acquereur_files_json convention=convention help="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
                         </div>
 
                         <div class="fr-input-group {% if form.reference_notaire.errors %}fr-select-group--error{% endif %}">
-                            {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire convention=convention textarea=True %}
+                            {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files form_input_files_json=form.reference_notaire_files_json convention=convention textarea=True %}
                         </div>
 
                         <div class="fr-input-group {% if form.reference_publication_acte.errors %}fr-select-group--error{% endif %}">
-                            {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte convention=convention textarea=True %}
+                            {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files form_input_files_json=form.reference_publication_acte_files_json convention=convention textarea=True %}
                         </div>
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete convention=convention %}
+                                    {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete form_input_files=form.acte_de_propriete_files form_input_files_json=form.acte_de_propriete_files_json convention=convention %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
 
-                                    {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial files=acte_notarial_files convention=convention %}
+                                    {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial form_input_files=form.acte_notarial_files form_input_files_json=form.acte_notarial_files_json  convention=convention %}
                                 </div>
                             </div>
                         </div>
