--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -36,14 +36,14 @@
             {% if textarea %}
                 <i class="fr-text--sm">et/ou </i>
             {% endif %}
-            <button type="button" class="fr-btn fr-mb-1w" onclick="document.getElementById('{{form_input_files_json.id_for_label}}_dropzone').click()">
+            <button type="button" class="fr-btn fr-mb-1w" onclick="document.getElementById('{{form_input_files.id_for_label}}_dropzone').click()">
                 <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image
             </button>
             {% include "common/help_field.html" with id="{{form_input.id_for_label}}_description" description="Les fichiers images et pdf sont acceptés dans la limite de 100 Mo" %}
 
         </div>
 
-        <div class="fr-col-12 dropzone dz" id="{{form_input_files_json.id_for_label}}_dropzone">
+        <div class="fr-col-12 dropzone dz" id="{{form_input_files.id_for_label}}_dropzone">
             <div class="fallback">
                 Votre navigateur ne permet pas de téléverser des documents.
                 Nous vous conseillons de modifier vos paramètres concernant
@@ -52,13 +52,13 @@
         </div>
         <input hidden
             type="hidden"
-            id="{{form_input_files_json.id_for_label}}"
-            name="{{form_input_files_json.html_name}}"
-            value="{{form_input_files_json.value }}" />
+            id="{{form_input_files.id_for_label}}"
+            name="{{form_input_files.html_name}}"
+            value="{{form_input_files.value }}" />
     </div>
     <script type="text/javascript">
-        let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files_json.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}');
-        init_dropzone_list({{form_input.id_for_label}},"{{form_input_files_json.id_for_label}}")
+        let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', '{{ convention.uuid }}');
+        init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
     </script>
 
 
