--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -1,5 +1,18 @@
 {% extends "layout/base.html" %}
 
+{% load static %}
+
+{% block javascript_extras %}
+    <script src="{% static "dropzonejs/min/dropzone.min.js" %}"></script>
+    <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}"></script>
+    <script src="{% static "js/dropzone-client.js" %}"></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static "dropzonejs/min/basic.min.css" %}">
+    <link rel="stylesheet" href="{% static "dropzonejs/min/dropzone.min.css" %}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
@@ -15,23 +28,11 @@
                             et donc plusieurs conventions. Il existe 2 types d’EDD: EDD simplifié & EDD volumétrique
                         </p>
 
-                        <div class="fr-input-group {% if form.edd_volumetrique.errors %}fr-select-group--error{% endif %}">
-                            <h4 class="fr-mb-1w" for="{{form.edd_volumetrique.id_for_label}}">
-                                EDD volumétrique
-                            </h4>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.edd_volumetrique rows=5 %}
-                        </div>
+                        {% include "common/form/input_upload.html" with label="EDD volumétrique" form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files convention=convention textarea=True %}
 
                         {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique label="Mention de publication de l'EDD volumétrique" %}
 
-                        <div class="fr-input-group {% if form.edd_classique.errors %}fr-select-group--error{% endif %}">
-                            <h4 class="fr-mb-1w" for="{{form.edd_classique.id_for_label}}">
-                                EDD classique
-                            </h4>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.edd_classique rows=5 %}
-                        </div>
+                        {% include "common/form/input_upload.html" with label="EDD classique" form_input=form.edd_classique form_input_files=form.edd_classique_files convention=convention textarea=True %}
 
                         {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique label="Mention de publication de l'EDD classique" %}
 
