--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -71,12 +71,12 @@
                                     {% include "common/display_field_if_exists.html" with label="Date d'achat" value=programme.date_achat %}
                                     {% include "common/display_field_if_exists.html" with label="Date d'achèvement previsible" value=programme.date_achevement_previsible %}
                                     {% include "common/display_field_if_exists.html" with label="Date d'achèvement ou d'obtention de certificat de conformité" value=programme.date_achevement %}
-                                    {% include "common/display_field_if_exists.html" with label="Vendeur" value=programme.vendeur %}
-                                    {% include "common/display_field_if_exists.html" with label="Acquéreur" value=programme.acquereur %}
-                                    {% include "common/display_field_if_exists.html" with label="Référence du notaire" value=programme.reference_notaire %}
-                                    {% include "common/display_field_if_exists.html" with label="Référence de publication de l'acte" value=programme.reference_publication_acte %}
-                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_de_propriete %}
-                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_notarial %}
+                                    {% include "common/display_field_if_exists.html" with label="Vendeur" value=programme.vendeur_text %}
+                                    {% include "common/display_field_if_exists.html" with label="Acquéreur" value=programme.acquereur_text %}
+                                    {% include "common/display_field_if_exists.html" with label="Référence du notaire" value=programme.reference_notaire_text %}
+                                    {% include "common/display_field_if_exists.html" with label="Référence de publication de l'acte" value=programme.reference_publication_acte_text %}
+                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_de_propriete_text %}
+                                    {% include "common/display_field_if_exists.html" with label="Acte de propriété" value=programme.acte_notarial_text %}
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,9 @@
                             <div class="fr-card fr-card--no-arrow">
                                 <div class="fr-card__body">
                                     <h4 class="fr-card__title">Programme - EDD</h4>
-                                    {% include "common/display_field_if_exists.html" with label="EDD volumétrique" value=programme.edd_volumetrique %}
+                                    {{programme.edd_volumetrique_text}}
+                                    {% include "common/display_field_if_exists.html" with label="EDD volumétrique" value=programme.edd_volumetrique_text %}
+                                    {% include "common/display_field_if_exists.html" with label="EDD classique" value=programme.edd_classique_text %}
                                     <p class="fr-my-1w">EDD Simplifé : </p>
                                     <div class="fr-table fr-table--bordered table--limited-height">
                                         <table>
@@ -383,7 +385,7 @@
                                 <div class="fr-card__body">
                                     <h4 class="fr-card__title">Informations à l'attention du service instructeur</h4>
                                     <div class="table--limited-height">
-                                        {% include "common/display_field_if_exists.html" with label="" value=convention.comments|linebreaks %}
+                                        {% include "common/display_field_if_exists.html" with label="" value=convention.comments_text|linebreaks %}
                                     </div>
                                 </div>
                             </div>
