--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -1,5 +1,19 @@
 {% extends "layout/base.html" %}
 
+{% load static %}
+
+{% block javascript_extras %}
+    <script src="{% static "dropzonejs/min/dropzone.min.js" %}"></script>
+    <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}"></script>
+    <script src="{% static "js/dropzone-client.js" %}"></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static "dropzonejs/min/basic.min.css" %}">
+    <link rel="stylesheet" href="{% static "dropzonejs/min/dropzone.min.css" %}">
+{% endblock %}
+
+
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
@@ -35,61 +49,21 @@
                             </div>
                         </div>
 
-                        <div class="fr-input-group {% if form.vendeur.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.vendeur.id_for_label}}">
-                                Vendeur
-                                {% include "common/mandatory_field.html" %}
-                                {% include "common/help_field.html" with form_input=form.vendeur description="Identité du vendeur telle que mentionnée dans l'acte de propriété" %}
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.vendeur rows=5 %}
-                        </div>
+                        {% include "common/form/input_upload.html" with label="Vendeur" form_input=form.vendeur form_input_files=form.vendeur_files convention=convention help="Identité du vendeur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
 
-                        <div class="fr-input-group {% if form.acquereur.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.acquereur.id_for_label}}">
-                                Acquéreur
-                                {% include "common/mandatory_field.html" %}
-                                {% include "common/help_field.html" with form_input=form.acquereur description="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" %}
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.acquereur rows=5 %}
-                        </div>
+                        {% include "common/form/input_upload.html" with label="Acquéreur" form_input=form.acquereur form_input_files=form.acquereur_files convention=convention help="Identité de l'acquéreur telle que mentionnée dans l'acte de propriété" textarea=True mandatory=True %}
 
-                        <div class="fr-input-group {% if form.reference_notaire.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.reference_notaire.id_for_label}}">
-                                Référence du notaire
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.reference_notaire rows=5 %}
-                        </div>
+                        {% include "common/form/input_upload.html" with label="Référence du notaire" form_input=form.reference_notaire form_input_files=form.reference_notaire_files convention=convention textarea=True %}
 
-                        <div class="fr-input-group {% if form.reference_publication_acte.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label fr-mb-1w" for="{{form.reference_publication_acte.id_for_label}}">
-                                Référence de publication de l'acte
-                            </label>
-                            {% include "common/form/input_upload_button.html" with textarea=True %}
-                            {% include "common/form/input_textarea.html" with form_input=form.reference_publication_acte rows=5 %}
-                        </div>
-
-
+                        {% include "common/form/input_upload.html" with label="Référence de publication de l'acte" form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files convention=convention textarea=True %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    <div class="fr-input-group {% if form.acte_de_propriete.errors %}fr-select-group--error{% endif %}">
-                                        <label class="fr-label fr-mb-1w" for="{{form.acte_de_propriete.id_for_label}}">
-                                            Acte de propriété
-                                        </label>
-                                        {% include "common/form/input_upload_button.html" with textarea=False %}
-                                    </div>
+                                    {% include "common/form/input_upload.html" with label="Acte de propriété" form_input=form.acte_de_propriete form_input_files=form.acte_de_propriete_files convention=convention %}
                                 </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    <div class="fr-input-group {% if form.acte_notarial.errors %}fr-select-group--error{% endif %}">
-                                        <label class="fr-label fr-mb-1w" for="{{form.acte_notarial.id_for_label}}">
-                                            Acte notarial
-                                        </label>
-                                        {% include "common/form/input_upload_button.html" with textarea=False %}
-                                    </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_upload.html" with label="Acte notarial" form_input=form.acte_notarial form_input_files=form.acte_notarial_files  convention=convention %}
                                 </div>
                             </div>
                         </div>
@@ -162,4 +136,12 @@
             </form>
         </div>
     </div>
+    <!-- <form action="/upload/" method="POST" class="dropzone dz">
+    {% csrf_token %}
+    <div class="fallback">
+        <input name="file" type multiple />
+    </div>
+</form> -->
+
+
 {% endblock %}
