display warning when it is IE

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -48,3 +48,35 @@
 .dz:hover {
   background-color: aliceblue !important;
 }
+
+.header-alert {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height:60px;
+}
+
+.content-alert {
+  border-radius: 25px;
+}
+
+.alert {
+  border: 2px solid #E10600;
+  background:#dacbca;
+  font-size:bold;
+}
+
+.form-button-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.small_thumbnail {
+  border-radius: 10px !important;
+  width:60px;
+  height:60px;
+  background-color: grey;
+}
