--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+                <div class="form-button-footer fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
                     {% include "common/button/precedent.html" with precedent='conventions:logements' convention_uuid=convention.uuid %}
                     {% include "common/button/suivant.html" with suivant='conventions:annexes' convention_uuid=convention.uuid %}
                 </div>
