--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -9,7 +9,7 @@
                     <p class="fr-mb-3w">
                         <span style="font-style: italic;">Référence de la convention : {{convention}}</span>
                     </p>
-                    <p class="fr-mb-3w fr-p-3w" style="border-radius: 25px;border: 2px solid #E10600;background:#dacbca;font-size:bold;">
+                    <p class="content-alert alert fr-mb-3w fr-p-3w">
                         <b>ATTENTION</b> : le document de convention n'est pas encore soumis à l'instruction
                     </p>
                     <p class="fr-mb-3w">La convention est enregistrée mais n'est pas encore soumise au service instructeur,
@@ -23,7 +23,7 @@
                 </div>
             </div>
 
-            <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+            <div class="form-button-footer fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
                 {% include "common/button/return_convention_index.html" %}
             </div>
 
