--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -34,7 +34,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+                <div class="form-button-footer fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
                     <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
                         Revenir à l'étape précédente
                     </a>
