--- a/templates/conventions/submitted.html
+++ b/templates/conventions/submitted.html
@@ -20,7 +20,7 @@
 
                 </div>
             </div>
-            <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+            <div class="form-button-footer fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w">
                 {% include "common/button/return_convention_index.html" %}
             </div>
         </div>
